# TinyCPP

./: README.md
cpp-compiler/: CMakeLists.txt  README.md
cpp-compiler/include/: AST.hpp  Compiler.hpp  IRGenerator.hpp  Lexer.hpp  Parser.hpp  SymbolTable.hpp  Token.hpp
cpp-compiler/inputs/: input.cpp
cpp-compiler/outputs/: output.asm
cpp-compiler/src/: Compiler.cpp  IRGenerator.cpp  Lexer.cpp  Parser.cpp  main.cpp
